--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1560,9 +1560,10 @@
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		width: 100%;
 		max-width: 100%;
-		margin-top: 2rem;
+		margin-top: 4rem;
 		text-align: center;
-		font-size: 0.8rem;
+		opacity: 0.2;
+		font-size: 0.7rem;
 	}
 
 		#footer .copyright {
